--- a/.github/workflows/subgraph.js.yml
+++ b/.github/workflows/subgraph.js.yml
@@ -13,6 +13,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./governance-contracts
 
     strategy:
       matrix:
@@ -27,3 +29,4 @@ jobs:
     - run: npm install 
     - run: npm run codegen
     - run: npm run build
+      working-directory: ${{env.working-directory}}
