--- a/.github/workflows/subgraph.js.yml
+++ b/.github/workflows/subgraph.js.yml
@@ -13,8 +13,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./governance-contracts
+
+    defaults:
+      run:
+        working-directory: governance-contracts
 
     strategy:
       matrix:
@@ -29,4 +31,4 @@ jobs:
     - run: npm install 
     - run: npm run codegen
     - run: npm run build
-      working-directory: ${{env.working-directory}}
+      
